<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ffffffff0x</groupId>
    <artifactId>BerylEnigma</artifactId>
    <version>1.6.2</version>
    <properties>
        <argLine>-Dfile.encoding=UTF-8</argLine>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <javafx.version>16</javafx.version>
        <classifier>win</classifier>
        <com.twelvemonkeys.version>3.7.0</com.twelvemonkeys.version>
    </properties>
    <build>
        <resources>
            <resource>
                <!-- 这里是放在 src/main/java-->
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.fxml</include>
                    <include>**/*.css</include>
                    <!-- 如果想要弄个包名专门放fxml文件，像上一行这样添加设置 -->
                    <!-- 之后，使用getResource("fxml/xx.fxml")这样子 -->
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>fffffff0x.beryenigma.App.Lanucher</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <jlinkImageName>beryenigma</jlinkImageName>
                    <launcher>launcher</launcher>
                    <mainClass>beryenigma/ffffffff0x.beryenigma.Main</mainClass>
                    <options>
                        <option>--add-opens</option>
                        <option>java.base/java.lang.reflect=com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
<!--                        <option>&#45;&#45;illegal-access=permit</option>-->
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
            <classifier>${classifier}</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>${classifier}</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>${classifier}</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>${classifier}</classifier>
        </dependency>

        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>

        <dependency>
            <groupId>apache</groupId>
            <artifactId>ApacheCommons</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/lib/ApacheCommons-1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--            <artifactId>imageio-jpeg</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--            <artifactId>imageio-tiff</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.common</groupId>-->
<!--            <artifactId>common-lang</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.common</groupId>-->
<!--            <artifactId>common-io</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.common</groupId>-->
<!--            <artifactId>common-image</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--            <artifactId>imageio-core</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--        <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--        <artifactId>imageio-metadata</artifactId>-->
<!--        <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->

        <!--        <dependency>-->
<!--            <groupId>org.apache.commons</groupId>-->
<!--            <artifactId>commons-text</artifactId>-->
<!--            <version>1.3</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>commons-codec</groupId>-->
<!--            <artifactId>commons-codec</artifactId>-->
<!--            <version>1.10</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.controlsfx</groupId>-->
<!--            <artifactId>controlsfx</artifactId>-->
<!--            <version>8.40.17</version>-->
<!--        </dependency>-->
    </dependencies>

</project>